...
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:text="Create New Event"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/addEventPicture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/addEventPicture"
...
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="7dp"
            android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:background="@null"
        app:layout_constraintBottom_toTopOf="@+id/createEventEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/add_image" />


...
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="New Event Title"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/createEventLocationEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addEventPicture" />

        <EditText
            android:id="@+id/createEventLocationEditText"
...
            android:rowCount="5"
            app:layout_constraintTop_toBottomOf="@+id/createEventLocationEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/editStartDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:paddingVertical="8dp"
                android:layout_margin="8dp"
                android:background="@drawable/editdate"
                android:ems="10"
                android:hint="Start Date"
                android:inputType="text"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editStartTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:paddingVertical="8dp"
                android:layout_margin="8dp"
                android:background="@drawable/editdate"
                android:ems="10"
                android:hint="Start Time"
                android:inputType="time"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editEndDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:paddingVertical="8dp"
                android:layout_margin="8dp"
                android:background="@drawable/editdate"
                android:ems="10"
                android:hint="End Date"
                android:inputType="text"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editEndTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:paddingVertical="8dp"
                android:layout_margin="8dp"
                android:background="@drawable/editdate"
...
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="Geo location" />

            <EditText
                android:id="@+id/editMaxPart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:ems="10"
                android:hint="Max Participants"
                android:inputType="text" />
...
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="2dp"
            android:text="Description"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/editDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editDetailsGrid" />

        <EditText
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editDescription">

            <Button
                android:id="@+id/addEventButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="Add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cancelEventButton"
...
