...
        android:text="Notification Title"
        android:textSize="24sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/etNotificationTitle"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:hint="Enter title"
        android:gravity="top|start"

        android:inputType="textMultiLine"
...
        android:text="Notification Message"
        android:textSize="20sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/etNotificationMessage"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:hint="Enter message"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
...
        android:text="Choose the event to make the notif for "
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="8dp" />

    <Spinner
        android:id="@+id/spinnerPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/btn_dropdown" />

    <TextView
...
        android:layout_marginBottom="8dp"
        android:text="Choose who to send the notification to "
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/spinnerPriority2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/btn_dropdown" />

    <Button
        android:id="@+id/btnSubmitNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:padding="16dp"
...
