<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_org_home"
        android:icon="@drawable/home"
        android:title="@string/title_home"
        android:visible="true" />

    <item
        android:id="@+id/navigation_org_camera"
        android:icon="@drawable/camera"
        android:title="@string/title_camera" />

    <item
        android:id="@+id/navigation_org_add"
        android:icon="@drawable/add_ring"
        android:title="@string/title_event" />


    <item
        android:id="@+id/navigation_org_notifications"
        android:icon="@drawable/bell"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_org_profile"
        android:icon="@drawable/user"
...
