...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="100"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/canceledButton"
                app:layout_constraintEnd_toStartOf="@+id/enrolledAmountView"
                app:layout_constraintStart_toEndOf="@+id/chosenPartView"
                app:layout_constraintTop_toTopOf="@+id/chosenAmountView" />

            <TextView
                android:id="@+id/enrolledAmountView"
...
                android:layout_marginStart="321dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="41dp"
                android:text="88/100"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/enrolledButton"
                app:layout_constraintEnd_toEndOf="@+id/chosenAmountView"
                app:layout_constraintStart_toStartOf="@+id/chosenAmountView"
                app:layout_constraintTop_toTopOf="@+id/chosenAmountView" />

            <Button
                android:id="@+id/chosenButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="294dp"
                android:layout_marginBottom="70dp"
                android:text="Chosen"
...
